fix story title pushing author box out of box

--- a/app/assets/stylesheets/stories/blurb.scss
+++ b/app/assets/stylesheets/stories/blurb.scss
@@ -6,6 +6,10 @@
   margin: 10px;
 }
 
+.story-text-wrapper {
+  height: 200px;
+}
+
 .blurb-image {
   width: 40%;
   height: 100%;
@@ -35,7 +39,7 @@
   font-weight: 400;
   font-size: 14px;
   color: rgba(0,0,0,.44);
-  margin-bottom: 130px;
+
   height: 0px;
   padding-bottom: 25px;
 }
